src/css/register-list.module.css
.registers-scroll-list-container {
  flex-grow: 1;
  min-width: 100px;
  max-width: 400px;
  position: relative;
  overflow-y: hidden;
}

.register-scroll-list-row {
  width: 200px;
  height: 30px;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
  border-top: 1px solid #7f7f7f7f;
  box-sizing: border-box;
}

.register-scroll-list-row.odd {
  background-color: #ffffff;
}

.register-scroll-list-row.even {
  background-color: var(--accent-color3);
}

.register-scroll-list-row .register-index {
  width: 70px;
  text-align: right;
}

.register-scroll-list-row .register-value.uninitialized {
  color: gray;
  font-style: italic;
}

